# Projet-5

./: 1_exploration_v3.ipynb  2_analyses.ipynb  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
src/fonctions/: fonctions_CV.py  fonctions_features.py  fonctions_grid.py
