[project]
name = "projet4"
version = "0.1.0"
description = ""
authors = [
    {name = "Thomas Auvin",email = "thomas.auvin@hotmail.fr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "polars (>=1.34.0,<2.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "mlxtend (>=0.23.4,<0.24.0)",
    "shap (>=0.48.0,<0.49.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "jupyterlab (>=4.4.9,<5.0.0)",
    "xgboost (>=3.0.5,<4.0.0)",
    "imbalanced-learn (>=0.14.0,<0.15.0)",
    "fastapi (>=0.121.2,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.4,<3.0.0)"
]

[tool.poetry]
packages = [{ include = "projet4", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
